# FDE-Program

Scenario 2 - Vendor Contract/: 1 Problem statement and success metrics.md  2 Delegation analysis.md  4 Validation design.md  README-Scenarios 2.md
Scenario_2_Vendor_Contract/: 3 Capability specification.md  5 Assumptions & unknowns.md  claude.md
Scenario_2_Vendor_Contract/agent_build/: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
Scenario_2_Vendor_Contract/agent_build/config/: playbook.sample.yaml  playbook.schema.json
Scenario_2_Vendor_Contract/agent_build/docs/: architecture.md  data-contracts.md  validation-report.md
Scenario_2_Vendor_Contract/agent_build/src/: __init__.py  app.py  audit.py  data_contracts.py  extraction_and_routing.py  ingestion.py  redline_and_approval.py
Scenario_2_Vendor_Contract/agent_build/tests/: test_validation_scenarios.py
Scenario_2_Vendor_Contract_2/: 1 Problem statement and success metrics.md  2 Delegation analysis.md  3 Capability specification.md  4 Validation design.md  5 Assumptions & unknowns.md  CLAUDE.md  README.md  approval.py  approve.py  audit.py  build-loop-diagnosis.md  classification.py  create_fixtures.py  critique-pool-KTB-3-410.md  extraction.py  ingestion.py  metrics.py  redlines.py  release.py  report.py  routing.py  run.py
Scenario_2_Vendor_Contract_2/.claude/: settings.local.json
Scenario_2_Vendor_Contract_2/Backup/: 2 Delegation analysis.md  4 Validation design.md
Scenario_2_Vendor_Contract_2/Input Contracts/: sample_escalation.docx  sample_negotiable.docx  (+2 more)
(+7 files in other folders)
